edited a few things

--- a/WineRatingDeepAnalysis.ipynb
+++ b/WineRatingDeepAnalysis.ipynb
@@ -2964,6 +2964,7 @@
     }
    ],
    "source": [
+    "# retraining with new data\n",
     "cc_model = RandomForestClassifier(n_estimators=200,max_depth=20)\n",
     "cc_model.fit(X_resampled, y_resampled)\n",
     "cc_y_pred = cc_model.predict(X_test_orig)\n",
