--- a/Model_Training.ipynb
+++ b/Model_Training.ipynb
@@ -26,21 +26,36 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\tristan\\anaconda3\\Lib\\site-packages\\sklearn\\cluster\\_kmeans.py:870: FutureWarning: The default value of `n_init` will change from 10 to 'auto' in 1.4. Set the value of `n_init` explicitly to suppress the warning\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\tristan\\anaconda3\\Lib\\site-packages\\sklearn\\cluster\\_kmeans.py:1382: UserWarning: KMeans is known to have a memory leak on Windows with MKL, when there are less chunks than available threads. You can avoid it by setting the environment variable OMP_NUM_THREADS=6.\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\tristan\\anaconda3\\Lib\\site-packages\\sklearn\\cluster\\_kmeans.py:870: FutureWarning: The default value of `n_init` will change from 10 to 'auto' in 1.4. Set the value of `n_init` explicitly to suppress the warning\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\tristan\\anaconda3\\Lib\\site-packages\\sklearn\\cluster\\_kmeans.py:1382: UserWarning: KMeans is known to have a memory leak on Windows with MKL, when there are less chunks than available threads. You can avoid it by setting the environment variable OMP_NUM_THREADS=7.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "balanced_accuracy_score of Random Forest Classifier:\n",
-      "0.718273075349929\n",
+      "resampling method usedRandomOverSampler(random_state=1)\n",
+      "accuracy_score of Random Forest Classifier:\n",
+      "0.7214285714285714\n",
       "Classification report of Random Forest Classifier:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "cooking wine       0.75      0.73      0.74       324\n",
-      "   promising       0.72      0.74      0.73       221\n",
-      "trivial wine       0.69      0.69      0.69       435\n",
+      "cooking wine       0.76      0.71      0.73       324\n",
+      "   promising       0.75      0.72      0.73       221\n",
+      "trivial wine       0.69      0.73      0.71       435\n",
       "\n",
-      "    accuracy                           0.71       980\n",
-      "   macro avg       0.72      0.72      0.72       980\n",
-      "weighted avg       0.71      0.71      0.71       980\n",
+      "    accuracy                           0.72       980\n",
+      "   macro avg       0.73      0.72      0.72       980\n",
+      "weighted avg       0.72      0.72      0.72       980\n",
       "\n"
      ]
     }
@@ -55,21 +70,36 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\tristan\\anaconda3\\Lib\\site-packages\\sklearn\\cluster\\_kmeans.py:870: FutureWarning: The default value of `n_init` will change from 10 to 'auto' in 1.4. Set the value of `n_init` explicitly to suppress the warning\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\tristan\\anaconda3\\Lib\\site-packages\\sklearn\\cluster\\_kmeans.py:1382: UserWarning: KMeans is known to have a memory leak on Windows with MKL, when there are less chunks than available threads. You can avoid it by setting the environment variable OMP_NUM_THREADS=3.\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\tristan\\anaconda3\\Lib\\site-packages\\sklearn\\cluster\\_kmeans.py:870: FutureWarning: The default value of `n_init` will change from 10 to 'auto' in 1.4. Set the value of `n_init` explicitly to suppress the warning\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\tristan\\anaconda3\\Lib\\site-packages\\sklearn\\cluster\\_kmeans.py:1382: UserWarning: KMeans is known to have a memory leak on Windows with MKL, when there are less chunks than available threads. You can avoid it by setting the environment variable OMP_NUM_THREADS=2.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "balanced_accuracy_score of Random Forest Classifier:\n",
-      "0.7147117496930929\n",
+      "resampling method usedRandomOverSampler(random_state=1)\n",
+      "accuracy_score of Random Forest Classifier:\n",
+      "0.75625\n",
       "Classification report of Random Forest Classifier:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "cooking wine       0.83      0.83      0.83       154\n",
-      "   promising       0.47      0.66      0.55        32\n",
-      "trivial wine       0.73      0.66      0.69       134\n",
+      "cooking wine       0.82      0.84      0.83       154\n",
+      "   promising       0.55      0.50      0.52        32\n",
+      "trivial wine       0.72      0.72      0.72       134\n",
       "\n",
-      "    accuracy                           0.74       320\n",
-      "   macro avg       0.68      0.71      0.69       320\n",
-      "weighted avg       0.75      0.74      0.74       320\n",
+      "    accuracy                           0.76       320\n",
+      "   macro avg       0.70      0.69      0.69       320\n",
+      "weighted avg       0.75      0.76      0.75       320\n",
       "\n"
      ]
     }
