divided code in functions

--- a/Model_Training.ipynb
+++ b/Model_Training.ipynb
@@ -43,19 +43,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "resampling method usedRandomOverSampler(random_state=1)\n",
+      "resampling method used: RandomOverSampler(random_state=1)\n",
+      "Performig hyperparameter-tuning with Gridsearch CV. Can take up to 1min30sec\n",
       "accuracy_score of Random Forest Classifier:\n",
-      "0.7214285714285714\n",
+      "0.7275510204081632\n",
       "Classification report of Random Forest Classifier:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "cooking wine       0.76      0.71      0.73       324\n",
-      "   promising       0.75      0.72      0.73       221\n",
-      "trivial wine       0.69      0.73      0.71       435\n",
+      "cooking wine       0.76      0.72      0.74       324\n",
+      "   promising       0.74      0.73      0.74       221\n",
+      "trivial wine       0.70      0.73      0.72       435\n",
       "\n",
-      "    accuracy                           0.72       980\n",
-      "   macro avg       0.73      0.72      0.72       980\n",
-      "weighted avg       0.72      0.72      0.72       980\n",
+      "    accuracy                           0.73       980\n",
+      "   macro avg       0.73      0.73      0.73       980\n",
+      "weighted avg       0.73      0.73      0.73       980\n",
       "\n"
      ]
     }
@@ -87,19 +88,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "resampling method usedRandomOverSampler(random_state=1)\n",
+      "resampling method used: RandomOverSampler(random_state=1)\n",
+      "Performig hyperparameter-tuning with Gridsearch CV. Can take up to 1min30sec\n",
       "accuracy_score of Random Forest Classifier:\n",
-      "0.75625\n",
+      "0.753125\n",
       "Classification report of Random Forest Classifier:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "cooking wine       0.82      0.84      0.83       154\n",
-      "   promising       0.55      0.50      0.52        32\n",
-      "trivial wine       0.72      0.72      0.72       134\n",
+      "cooking wine       0.83      0.85      0.84       154\n",
+      "   promising       0.52      0.53      0.52        32\n",
+      "trivial wine       0.72      0.69      0.71       134\n",
       "\n",
-      "    accuracy                           0.76       320\n",
-      "   macro avg       0.70      0.69      0.69       320\n",
-      "weighted avg       0.75      0.76      0.75       320\n",
+      "    accuracy                           0.75       320\n",
+      "   macro avg       0.69      0.69      0.69       320\n",
+      "weighted avg       0.75      0.75      0.75       320\n",
       "\n"
      ]
     }
