--- a/Model_Training.ipynb
+++ b/Model_Training.ipynb
@@ -26,33 +26,20 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\tristan\\anaconda3\\Lib\\site-packages\\sklearn\\cluster\\_kmeans.py:870: FutureWarning: The default value of `n_init` will change from 10 to 'auto' in 1.4. Set the value of `n_init` explicitly to suppress the warning\n",
-      "  warnings.warn(\n",
-      "c:\\Users\\tristan\\anaconda3\\Lib\\site-packages\\sklearn\\cluster\\_kmeans.py:1382: UserWarning: KMeans is known to have a memory leak on Windows with MKL, when there are less chunks than available threads. You can avoid it by setting the environment variable OMP_NUM_THREADS=6.\n",
-      "  warnings.warn(\n",
-      "c:\\Users\\tristan\\anaconda3\\Lib\\site-packages\\sklearn\\cluster\\_kmeans.py:870: FutureWarning: The default value of `n_init` will change from 10 to 'auto' in 1.4. Set the value of `n_init` explicitly to suppress the warning\n",
-      "  warnings.warn(\n",
-      "c:\\Users\\tristan\\anaconda3\\Lib\\site-packages\\sklearn\\cluster\\_kmeans.py:1382: UserWarning: KMeans is known to have a memory leak on Windows with MKL, when there are less chunks than available threads. You can avoid it by setting the environment variable OMP_NUM_THREADS=7.\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "resampling method used: RandomOverSampler(random_state=1)\n",
-      "Performig hyperparameter-tuning with Gridsearch CV. Can take up to 1min30sec\n",
-      "accuracy_score of Random Forest Classifier:\n",
-      "0.7275510204081632\n",
+      "---------------------------------------------------------\n",
+      "Performig hyperparameter-tuning with Gridsearch CV. Can take up to 1min 30sec\n",
+      "the best parameters are: {'max_depth': None, 'n_estimators': 200}\n",
+      "---------------------------------------------------------\n",
       "Classification report of Random Forest Classifier:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
       "cooking wine       0.76      0.72      0.74       324\n",
-      "   promising       0.74      0.73      0.74       221\n",
-      "trivial wine       0.70      0.73      0.72       435\n",
+      "   promising       0.75      0.73      0.74       221\n",
+      "trivial wine       0.69      0.73      0.71       435\n",
       "\n",
       "    accuracy                           0.73       980\n",
       "   macro avg       0.73      0.73      0.73       980\n",
@@ -71,37 +58,24 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\tristan\\anaconda3\\Lib\\site-packages\\sklearn\\cluster\\_kmeans.py:870: FutureWarning: The default value of `n_init` will change from 10 to 'auto' in 1.4. Set the value of `n_init` explicitly to suppress the warning\n",
-      "  warnings.warn(\n",
-      "c:\\Users\\tristan\\anaconda3\\Lib\\site-packages\\sklearn\\cluster\\_kmeans.py:1382: UserWarning: KMeans is known to have a memory leak on Windows with MKL, when there are less chunks than available threads. You can avoid it by setting the environment variable OMP_NUM_THREADS=3.\n",
-      "  warnings.warn(\n",
-      "c:\\Users\\tristan\\anaconda3\\Lib\\site-packages\\sklearn\\cluster\\_kmeans.py:870: FutureWarning: The default value of `n_init` will change from 10 to 'auto' in 1.4. Set the value of `n_init` explicitly to suppress the warning\n",
-      "  warnings.warn(\n",
-      "c:\\Users\\tristan\\anaconda3\\Lib\\site-packages\\sklearn\\cluster\\_kmeans.py:1382: UserWarning: KMeans is known to have a memory leak on Windows with MKL, when there are less chunks than available threads. You can avoid it by setting the environment variable OMP_NUM_THREADS=2.\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "resampling method used: RandomOverSampler(random_state=1)\n",
-      "Performig hyperparameter-tuning with Gridsearch CV. Can take up to 1min30sec\n",
-      "accuracy_score of Random Forest Classifier:\n",
-      "0.753125\n",
+      "resampling method used: SMOTE(random_state=1)\n",
+      "---------------------------------------------------------\n",
+      "Performig hyperparameter-tuning with Gridsearch CV. Can take up to 1min 30sec\n",
+      "the best parameters are: {'max_depth': 20, 'n_estimators': 200}\n",
+      "---------------------------------------------------------\n",
       "Classification report of Random Forest Classifier:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "cooking wine       0.83      0.85      0.84       154\n",
-      "   promising       0.52      0.53      0.52        32\n",
-      "trivial wine       0.72      0.69      0.71       134\n",
+      "cooking wine       0.81      0.82      0.82       154\n",
+      "   promising       0.46      0.66      0.54        32\n",
+      "trivial wine       0.72      0.63      0.67       134\n",
       "\n",
-      "    accuracy                           0.75       320\n",
-      "   macro avg       0.69      0.69      0.69       320\n",
-      "weighted avg       0.75      0.75      0.75       320\n",
+      "    accuracy                           0.73       320\n",
+      "   macro avg       0.66      0.70      0.67       320\n",
+      "weighted avg       0.74      0.72      0.73       320\n",
       "\n"
      ]
     }
