--- a/Model_Training.ipynb
+++ b/Model_Training.ipynb
@@ -7,7 +7,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "import pipelinee\n"
+    "import p_utils as util\n"
    ]
   },
   {
@@ -49,7 +49,7 @@
     }
    ],
    "source": [
-    "pipelinee.training(df_white)"
+    "util.training(df_white)"
    ]
   },
   {
@@ -81,7 +81,7 @@
     }
    ],
    "source": [
-    "pipelinee.training(df_red)"
+    "util.training(df_red)"
    ]
   }
  ],
